# ros_hsvthresholding

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/image_transport_tutorial/: ResizedImage.h
devel/lib/circle_det/: circle_det
devel/lib/image_transport_tutorial/: my_publisher  my_subscriber
devel/lib/pkgconfig/: circle_det.pc  image_handling.pc  image_transport_tutorial.pc
devel/share/circle_det/cmake/: circle_det-msg-paths.cmake  circle_detConfig.cmake
devel/share/roseus/ros/circle_det/: manifest.l
src/circle_det/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
src/circle_det/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/circle_det/catkin_generated/installspace/: circle_det.pc  circle_detConfig.cmake
src/circle_det/catkin_generated/stamps/circle_det/: package.xml.stamp
src/circle_det/cmake/: circle_det-genmsg-context.py  circle_det-genmsg.cmake
src/circle_det/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/circle_det/devel/lib/circle_det/: circle_det
src/circle_det/devel/lib/pkgconfig/: circle_det.pc
src/circle_det/devel/share/circle_det/cmake/: circle_detConfig.cmake
src/circle_det/devel/share/roseus/ros/circle_det/: manifest.l
src/circle_det/gtest/: CTestTestfile.cmake  Makefile
src/circle_det/nbproject/: configurations.xml  project.xml
src/circle_det/nbproject/private/: configurations.xml  private.xml
src/circle_det/src/: circle_det.cpp
(+5 files in other folders)
